# roller-coaster-engine

./: README.md
experiments/background/: Background.cpp  CMakeLists.txt
experiments/camera-control/: CMakeLists.txt  CameraControl.cpp  resources.cfg
experiments/camera-control/model/: Material.material
experiments/gui/: CMakeLists.txt  DesingGUI.cpp  TraysPositions.txt
experiments/pick-and-drag/: CMakeLists.txt  PickDrag.cpp
experiments/select-entity/: CMakeLists.txt  SelectEntity.cpp
project/: CMakeLists.txt  DesignGUI.cpp  RollerCoasterEngine.cpp  resources.cfg  settings.h
project/assets/material/: Examples.material  SdkTrays.fontdef  SdkTrays.material  SdkTrays.overlay
project/assets/model/: Cube.mesh  Suzanne.mesh  arrow.mesh  body.mesh  curve1.mesh  glass.material  metalic_grey.material  metalic_orange.material  metalic_red.material  metalic_white.material  window.mesh  winds.mesh
project/assets/model/fences/: RCE_chainlink.material  RCE_fence_supports.material  barbed_wire_end_L.mesh  barbed_wire_end_R.mesh  barbed_wire_middle.mesh  barbed_wire_reinforced.mesh  chainlink_mesh_end_L.mesh  chainlink_mesh_end_R.mesh  chainlink_mesh_middle.mesh  chainlink_mesh_reinforced.mesh  fence_barbed_wire_arm.mesh  fence_brace_BT.mesh  fence_brace_TB.mesh  fence_crossbar.mesh  fence_crossbar_end_L.mesh  fence_crossbar_end_R.mesh  fence_crossbar_short.mesh  fence_crossbar_support_socket_L.mesh  fence_crossbar_support_socket_R.mesh  fence_crossbar_support_socket_dual.mesh  fence_post_heavy.mesh  fence_post_heavy_tall.mesh  fence_post_heavy_tension_band.mesh  fence_post_heavy_tension_band_dual.mesh  fence_post_heavy_tension_bar.mesh  fence_post_light.mesh
project/assets/model/helicopter/: Cube.002.mesh  Cube.003.mesh  Cube.004.mesh  Cube.005.mesh  Cube.006.mesh  Cube.007.mesh  Cube.008.mesh  Cube.009.mesh  Cube.mesh  Cylinder.001.mesh  Cylinder.002.mesh  Cylinder.004.mesh  Cylinder.005.mesh  Cylinder.mesh  Glass.material  Material.001.material  Material.002.material  Material.003.material  Material.004.material  Material.005.material  Material.006.material  Material.007.material  Material.008.material  Material.009.material  Material.010.material  Material.011.material  Material.material  RegaLogo.material  Torus.001.mesh  Torus.mesh
project/assets/model/pine_tree/: RCE_Bark_Branch_Mat.material  RCE_Cap_Branch_Mat.material  RCE_conifer_macedonian_pine_Leaf_Mat.material  conifer_macedonian_pine.mesh
project/assets/model/scene_trains/: Black.material  Circle.mesh  Cube.001.mesh  Cube.002.mesh  Delta.0000.mesh  Epsilon.0000.mesh  Gamma.0000.mesh  Glass.material  Metall.material  Plane.mesh  Posts.0000.mesh  Posts.0001.mesh  Posts.0002.mesh  Posts.0003.mesh  Posts.0004.mesh  Posts.0005.mesh  RCE_Black_Trains.material  RCE_Glass_Trains.material  RCE_Metall_Trains.material  RCE_Read_Trains.material  RCE_wight_Trains.material  Rails.0000.mesh  Rails.0001.mesh  Rails.0002.mesh  Rails.0003.mesh  Rails.0004.mesh  Rails.0005.mesh  Read.material  Theta.0000.mesh  Theta.0001.mesh  Theta.0002.mesh  Theta.0003.mesh  Theta.0004.mesh  Theta.0005.mesh  Theta.0006.mesh  Theta.0007.mesh  Theta.0008.mesh  Theta.0009.mesh  Theta.0010.mesh  Theta.0011.mesh  (+8 more)
project/assets/model/zepelin/: RCE_body_zepelin.material  RCE_door_zepelin.material  RCE_wings_cabin.material  REC_glass_zepelin.material  Untitled.004.mesh  Untitled.006.mesh  Untitled.mesh
project/texture/: rail.tga  rail2.tga
